--- a/firstapplication.html
+++ b/firstapplication.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <script src="angular.min.js"></script>
+      <script src="app.js"></script>
       <meta charset="utf-8">
       <title>AngularJS First Application</title>
   </head>
@@ -8,6 +10,8 @@
   <body>
     <h1>Sample Application</h1>
       <div>
+          <p>Enter you Name: <input type="text" ng-model="name"></p>
+          <p>Hello <span ng-bing="name"></span>!</p>
       </div>
   </body>
 </html>
