--- a/firstapplication.html
+++ b/firstapplication.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Sample Application</h1>
       <div>
-          <p>Enter you Name: <input type="text" ng-model="name"></p>
+          <p>Enter you Name: bro <input type="text" ng-model="name"></p>
           <p>Hello <span ng-bing="name"></span>!</p>
       </div>
   </body>
