--- a/firstapplication.html
+++ b/firstapplication.html
@@ -7,11 +7,11 @@
       <title>AngularJS First Application</title>
   </head>
 
-  <body>
+  <body ng-app="myapp">
     <h1>Sample Application</h1>
       <div>
-          <p>Enter you Name: bro <input type="text" ng-model="name"></p>
-          <p>Hello <span ng-bing="name"></span>!</p>
+          <p>Enter you Name: <input type="text" ng-model="name"></p>
+          <p>Hello <span ng-bing="name"></span>{{name}}!</p>
       </div>
   </body>
 </html>
